# EigenAttn

./: .gitignore  README.md  datautils.py  evaluate_llm.py  main_eigen_attn.py  parallel_utils.py  peft_lora_alpaca.py  pyproject.toml
decompose/: eigen_attn.py  eigen_attn_utils.py
lm_eval/: evaluator.py
lm_eval/models/: huggingface.py
models/: LMClass.py  decompose_modules.py  modelling_llama_eigen_attn.py  modelling_mpt_eigen_attn.py  modelling_opt_eigen_attn.py  models_utils.py
